<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gimme Collage</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search for a friend...</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_image_processor">Select a template</string>
    <string name="desc">description</string>
    <string name="title_activity_authentication">Authentication</string>

    <!-- Main Activity -->
    <string name="main_activity_dialog_no_images">No images for collage. Would you like to add some?</string>
    <string name="main_activity_dialog_add_images">Add images</string>
    <string name="main_activity_dialog_no">No</string>
    <string name="main_activity_progress_just_a_second">Just a second</string>
    <string name="main_activity_progress_generating_collage">Generating collage...</string>
    <string name="main_activity_progress_saving_collage">Saving collage...</string>
    <string name="main_activity_toast_collage_saved_to">Collage saved to </string>
    <string name="main_activity_collage_mail_subject">Little candy</string>
    <string name="main_activity_collage_mail_text">\n#gimmecollage</string>
    <string name="main_activity_share_chooser">Share via</string>

    <!-- Color picker dialog -->
    <string name="color_picker_dialog_select">Ok</string>
    <string name="color_picker_dialog_cancel">Cancel</string>
    <string name="color_picker_dialog_title">Select background color</string>

    <!-- CollageActivity strings -->
    <string name="action_main_share">Share</string>
    <string name="action_main_save">Save</string>
    <string name="action_main_pick_collage_background_color">Chang Background Color</string>
    <string name="action_main_trash">Clear All</string>

    <!-- LoginActivity strings -->
    <string name="source_instagram_name">Instagram</string>
    <string name="source_instagram_login">Log in</string>
    <string name="source_instagram_logout">Log out</string>
    <string name="source_instagram_hint_logged">Logged as</string>
    <string name="source_instagram_hint_not_logged">Please sign in with your Instagram account.</string>

    <!-- Gallery Picker Activity -->
    <string name="title_activity_gallery_picker">Gallery Picker</string>
    <string name="gp_confirm">Confirm</string>
    <string name="isp_close">Close</string>
    <string name="gp_counter_text">images picked</string>

    <!-- AdMob id -->
    <string name="admob_banner_id">ca-app-pub-4891843703958167/2424931530</string>
    <string name="admob_interstitial_video_id">ca-app-pub-4891843703958167/8353713939</string>
    <string name="admob_interstitial_graphic_id">ca-app-pub-4891843703958167/6876980737</string>

    <!-- Google Tag Manager -->
    <string name="tag_manager_tracker_id">GTM-NKM9JC</string>

    <!-- Google Analytic Events ================================================================ -->
    <!-- Add images event -->
    <string name="ga_event_category_open_pull_via_touch_collage">Main GUI</string>
    <string name="ga_event_action_open_pull_via_touch_collage">Touch Collage</string>
    <string name="ga_event_label_open_pull_via_touch_collage">Open Pull</string>

    <!-- Select image source event gallery -->
    <string name="ga_event_category_select_img_src_gallery">Main GUI</string>
    <string name="ga_event_action_select_img_src_gallery">Select List Item</string>
    <string name="ga_event_label_select_img_src_gallery">Select Gallery</string>

    <!-- Select image source event instagram -->
    <string name="ga_event_category_select_img_src_instagram">Main GUI</string>
    <string name="ga_event_action_select_img_src_instagram">Select List Item</string>
    <string name="ga_event_label_select_img_src_instagram">Select Instagram</string>

    <!-- Instagram authentication success -->
    <string name="ga_event_category_instagram_auth_success">Instagram</string>
    <string name="ga_event_action_instagram_auth_success">Instagram Auth</string>
    <string name="ga_event_label_instagram_auth_success">Success</string>

    <!-- Instagram authentication failed -->
    <string name="ga_event_category_instagram_auth_failed">Instagram</string>
    <string name="ga_event_action_instagram_auth_failed">Instagram Auth</string>
    <string name="ga_event_label_instagram_auth_failed">Failed (Wrong access token)</string>

    <!-- Share via fab event -->
    <string name="ga_event_category_share_via_fab">Main GUI</string>
    <string name="ga_event_action_share_via_fab">Share</string>
    <string name="ga_event_label_share_via_fab">Share The Results Via FAB</string>

    <!-- Share via action bar event -->
    <string name="ga_event_category_share_via_action_bar">Main GUI</string>
    <string name="ga_event_action_share_via_action_bar">Share</string>
    <string name="ga_event_label_share_via_action_bar">Share The Results Via Action Bar</string>

    <!-- Save via fab event -->
    <string name="ga_event_category_save_via_fab">Main GUI</string>
    <string name="ga_event_action_save_via_fab">Save</string>
    <string name="ga_event_label_save_via_fab">Save The Results Via FAB</string>

    <!-- Share via action bar event -->
    <string name="ga_event_category_save_via_action_bar">Main GUI</string>
    <string name="ga_event_action_save_via_action_bar">Save</string>
    <string name="ga_event_label_save_via_action_bar">Save The Results Via Action Bar</string>

    <!-- Open background color picker dialog via action button event -->
    <string name="ga_event_category_open_back_clr_picker_via_action_btn">Additional GUI</string>
    <string name="ga_event_action_open_back_clr_picker_via_action_btn">Background color picker dialog</string>
    <string name="ga_event_label_open_back_clr_picker_via_action_btn">Open via action button</string>

    <!-- Open background color picker dialog via action bar event -->
    <string name="ga_event_category_open_back_clr_picker_via_action_bar">Additional GUI</string>
    <string name="ga_event_action_open_back_clr_picker_via_action_bar">Background color picker dialog</string>
    <string name="ga_event_label_open_back_clr_picker_via_action_bar">Open via action bar</string>

    <!-- Trash via fab event -->
    <string name="ga_event_category_trash_via_fab">Main GUI</string>
    <string name="ga_event_action_trash_via_fab">Trash</string>
    <string name="ga_event_label_trash_via_fab">Trash via fab</string>

    <!-- Trash via action bar event -->
    <string name="ga_event_category_trash_via_action_bar">Main GUI</string>
    <string name="ga_event_action_trash_via_action_bar">Trash</string>
    <string name="ga_event_label_trash_via_action_bar">Trash via action bar</string>

    <!-- Trash via action bar event -->
    <string name="ga_event_category_img_action_btn_rotate_left">Additional GUI</string>
    <string name="ga_event_action_img_action_btn_rotate_left">Action buttons</string>
    <string name="ga_event_label_img_action_btn_rotate_left">Rotate left</string>

    <!-- Trash via action bar event -->
    <string name="ga_event_category_img_action_btn_rotate_right">Additional GUI</string>
    <string name="ga_event_action_img_action_btn_rotate_right">Action buttons</string>
    <string name="ga_event_label_img_action_btn_rotate_right">Rotate right</string>

    <!-- See Interstitial when back to Main Activity event -->
    <string name="ga_event_category_see_interstitial_back_to_main_activity">Show Ads</string>
    <string name="ga_event_action_see_interstitial_back_to_main_activity">Interstitial</string>
    <string name="ga_event_label_see_interstitial_back_to_main_activity">Show Interstitial When Back To Main Activity</string>

    <!-- Apply gallery images event -->
    <string name="ga_event_category_apply_gallery_images">Main GUI</string>
    <string name="ga_event_action_apply_gallery_images">Apply Gallery Images</string>
    <string name="ga_event_label_apply_gallery_images">Apply Gallery Images In Action Bar</string>

    <!-- Swap collage images event -->
    <string name="ga_event_category_swap_collage_images">Additional GUI</string>
    <string name="ga_event_action_swap_collage_images">Collage Image Control</string>
    <string name="ga_event_label_swap_collage_images">Swap Collage Images</string>

    <!-- Swap image from pull event -->
    <string name="ga_event_category_swap_image_from_pull">Additional GUI</string>
    <string name="ga_event_action_swap_image_from_pull">Collage Image Control</string>
    <string name="ga_event_label_swap_image_from_pull">Swap Image From Pull</string>

    <!-- Select item navigation drawer event -->
    <string name="ga_event_category_item_selected_nav_drawer">Main GUI</string>
    <string name="ga_event_action_item_selected_nav_drawer">Navigation Drawer</string>
    <string name="ga_event_label_item_selected_nav_drawer">Select item</string>

    <!-- Add images to pull from gallery event -->
    <string name="ga_event_category_item_add_images_to_pull_from_gallery">Main GUI</string>
    <string name="ga_event_action_item_add_images_to_pull_from_gallery">Image Picker</string>
    <string name="ga_event_label_item_add_images_to_pull_from_gallery">Add images from gallery</string>

    <!-- Add images to pull from instagram event -->
    <string name="ga_event_category_item_add_images_to_pull_from_instagram">Main GUI</string>
    <string name="ga_event_action_item_add_images_to_pull_from_instagram">Image Picker</string>
    <string name="ga_event_label_item_add_images_to_pull_from_instagram">Add images from instagram</string>

    <!-- ======================================================================================= -->

    <!-- Navigation Drawer -->
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="drawer_item_collage">Collage</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_report">Report</string>

    <string name="title_activity_image_source_picker">ImageSourcePicker</string>
    <string name="image_source_gallery">Gallery</string>
    <string name="image_source_instagram">Instagram</string>

    <!-- Report fragment -->
    <string name="report_button_report">Report</string>
    <string name="report_text_hint">Please, describe your issue here</string>
    <string name="report_email_address">crystaltechapps@gmail.com</string>
    <string name="report_mail_subject">GimmeCollage Bug Report</string>
    <string name="report_toast_message">Thank you for report!</string>
    <string name="report_recommendation_text">Feel free to report any issue you may face with\
        our app. You can just send your opinion or suggestion as well.\n\n\
        Your Gimme Collage™ team.
    </string>
    <string name="report_copyrights">Copyright © 2014-2015 CRYSTAL TECH™\nAll Rights Reserved.</string>

    <!-- Settings fragment -->
    <string name="pref_action_buttons_title">Disable buttons</string>
    <string name="pref_action_buttons_summary">Disable image action buttons</string>
</resources>