<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="crystal.tech.gimmecollage.app.CollageFragment" >
    <item android:id="@+id/action_share"
        android:title="@string/action_main_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"/>
    <item android:id="@+id/action_save"
        android:title="@string/action_main_save"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="101"/>
    <item android:id="@+id/action_pick_collage_background_color"
        android:title="@string/action_main_pick_collage_background_color"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="102"/>
    <item android:id="@+id/action_trash"
        android:title="@string/action_main_trash"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="103"/>
</menu>
