<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_background"
    tools:context="crystal.tech.gimmecollage.app.SettingsFragment">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:id="@+id/editTextReport"
            android:layout_width="fill_parent"
            android:hint="@string/report_text_hint"
            android:gravity="top"
            android:background="@drawable/report_edit_text_back"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_height="200dp" />

        <Button style="@style/Button"
            android:id="@+id/buttonReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_button_report"
            android:layout_below="@+id/editTextReport"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/textViewRecommendation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonReport"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:text="@string/report_recommendation_text"/>

        <TextView
            android:id="@+id/textViewCopyrights"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:textColor="#a8959595"
            android:textSize="16sp"
            android:text="@string/report_copyrights"/>
    </RelativeLayout>

</FrameLayout>
